syntax = "proto3";

option csharp_namespace = "FBEVJKGADQD.Protocol";
message EnterSceneDoneReq {
  uint32 enter_scene_token = 9;
}
