syntax = "proto3";

option csharp_namespace = "FBEVJKGADQD.Protocol";
message EnterSceneDoneRsp {
  uint32 enter_scene_token = 1;
}
