syntax = "proto3";
option csharp_namespace = "FBEVJKGADQD.Protocol";
message PostEnterSceneReq {
  uint32 enter_scene_token = 6;
}
