syntax = "proto3";
option csharp_namespace = "FBEVJKGADQD.Protocol";
message PostEnterSceneRsp {
  uint32 enter_scene_token = 11;
}
